# sendrecv

./: .gitignore  CMakeLists.txt  README.md  run.cmd
cmake/: detect_gstreamer.cmake
src/: main.cpp
